--- a/README
+++ b/README
@@ -1,1 +1,44 @@
-# Huff, in racket
+# Huff, in Racket
+
+Puff is an experimental Huff compiler implemented in Racket. It currently supports a small subset of full Huff functionality.
+
+## Current Status
+
+Very early WIP!
+
+### Implemented
+
+Not much yet, but we can compile a basic contract that has a single MAIN macro, imports other files, and references constants.
+
+### Not Implemented
+- Calling macros/functions from Main
+- Custom constructors
+- Built-ins like __FUNC_SIG, etc.
+- Lots of other stuff!
+
+## Usage
+
+### Build keccak library
+
+Puff depends on the keccak implementation from [Alloy](https://github.com/alloy-rs/core). 
+
+We need a tiny bit of Rust code to build a library we can call from Racket over FFI. This is all handled by the makefile.
+
+Clone the repository, then from its root, run:
+
+`make deps`
+
+### Run
+
+Compile one of the example contracts:
+
+`racket main.rkt -b examples/add_two.huff`
+
+### [Optional] Compile executable
+
+You can do this already with `raco exe main.rkt -o puffc` and then `raco distribute out puffc`. This gives you a directory (called `out`) containing an executable and the required lib. 
+
+I then ran `ln -s /home/z80/dev/puff/out/bin/puffc /home/z80/.local/bin/puffc` to create a symlink in a directory that's in my path, so I can call puffc from anywhere.
+
+I'll be automating this in some way but if you're interested, that's how you do it
+
